--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Colgado</title>
   </head>
   <body class="container">
+    <p class="hide" id="error"></p>
     <p id="attempts">Attempts Left:</p>
     <form action="" id="form" class="form">
       <label for="word">Write Letter</label>
