--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</header>
 		<div class="container">
 			<p class="hide" id="error"></p>
+			<p id="winner-or-loser"></p>
 			<p id="attempts">Attempts Left:</p>
 			<form action="" id="form" class="form mb-5">
 				<label class="form-label" for="word">Write Letter</label>
